# logo-recognition-model

./: README.md  pyproject.toml
notebooks/: 001-OWL-VIT-zeroshot-logo-recognition.ipynb  002-clip-small-patches.ipynb
notebooks/.ipynb_checkpoints/: 002-clip-small-patches-checkpoint.ipynb  003-clean-clip-small-patches-checkpoint.ipynb
